# adhd-task-tracker

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  supabase-schema.sql  vercel.json
api/python/: index.py  main.py  pyproject.toml  requirements.txt
src/app/: page.tsx
src/app/api/python/health/: route.ts
src/app/api/python/stats/[userId]/: route.ts
src/app/api/python/tasks/: route.ts
src/app/api/python/tasks/task/[taskId]/: route.ts
src/app/api/python/tasks/user/[userId]/: route.ts
src/app/api/stats/[userId]/: route.ts
src/app/api/tasks/: route.ts
src/app/api/tasks/[taskId]/: route.ts
src/app/api/tasks/user/[userId]/: route.ts
src/app/api/test/: route.ts
src/components/: Button.tsx  Input.tsx  Select.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  UserStats.tsx
src/lib/: api.ts  prepSteps.ts  supabase.ts
src/lib/supabase/: server.ts  types.ts
src/types/: index.ts
